--- a/WeatherApp.csproj
+++ b/WeatherApp.csproj
@@ -58,7 +58,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModel\Commands\SearchCommand.cs" />
     <Compile Include="ViewModel\Helpers\AccuWeatherHelper.cs" />
+    <Compile Include="ViewModel\ValueConverters\BooltoRain.cs" />
     <Compile Include="ViewModel\WeatherVM.cs" />
     <Compile Include="View\WeatherWindow.xaml.cs">
       <DependentUpon>WeatherWindow.xaml</DependentUpon>
